--- a/style.css
+++ b/style.css
@@ -57,9 +57,9 @@ body{
 
 
 .popup{
-    height: 70vh;
+    height: 60vh;
     width: 60vw;
-    background-color: #2ca1a1;
+    background-color: rgb(0,0,0,0.1);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -73,5 +73,5 @@ body{
     display: none;
 }
 .popup p{
-    margin: 20vh 0;    
+    margin: 15vh 0;    
 }
