--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
 .popup{
     height: 60vh;
     width: 60vw;
-    background-color: #2ca1a1a;
+    background-color: #2ca1a1;
     display: flex;
     flex-direction: column;
     justify-content: center;
